@@ -2826,7 +2826,8 @@ init_intent_out_dt (gfc_symbol * proc_sym, tree body)
   gfc_init_block (&fnblock);
   for (f = proc_sym->formal; f; f = f->next)
     if (f->sym && f->sym->attr.intent == INTENT_OUT
-	  && f->sym->ts.type == BT_DERIVED)
+	&& !f->sym->attr.pointer
+	&& f->sym->ts.type == BT_DERIVED)
       {
 	if (f->sym->ts.derived->attr.alloc_comp)
 	  {
@@ -3573,6 +3574,7 @@ generate_local_decl (gfc_symbol * sym)
 	 automatic lengths.  */
       if (sym->attr.dummy && !sym->attr.referenced
 	    && sym->ts.type == BT_DERIVED
+	    && !sym->attr.pointer
 	    && sym->ts.derived->attr.alloc_comp
 	    && sym->attr.intent == INTENT_OUT)
 	{
