@@ -1,3 +1,8 @@
+2009-07-29  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/40851
+	* gfortran.dg/derived_init_3.f90: New test.
+
 2009-07-28  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
