@@ -1,3 +1,10 @@
+2009-07-29  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/40851
+	* resolve.c (resolve_symbol): Do not initialize pointer derived-types.
+	* trans-decl.c (init_intent_out_dt): Ditto.
+	(generate_local_decl): No need to set attr.referenced for DT pointers.
+
 2009-07-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR fortran/40878
